--- a/ezlearning-frontend/UI/home.html
+++ b/ezlearning-frontend/UI/home.html
@@ -82,8 +82,10 @@
                 <button class="button-white-small" style="float: right;">Xem thêm</button>
             </div>
             <div class="tile-container">
-                <div class="tile" style="grid-column: 1 / span 3;">
-                    <img src="res/imgs/test/voucher1.png" class="tile-banner">
+                <div id="voucher" class="tile" style="grid-column: 1 / span 3; position: relative;">
+                    <img id="v2" src="res/imgs/vouchers/voucher2.png" class="tile-banner" style="z-index: 3;">
+                    <img id="v3" src="res/imgs/vouchers/voucher3.png" class="tile-banner" style="z-index: 2;">
+                    <img id="v1" src="res/imgs/vouchers/voucher1.png" class="tile-banner" style="z-index: 1;">
                 </div>
                 <div style="height: 100%; position: relative;">
                     <div class="tile-price">
@@ -111,7 +113,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -149,7 +151,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -163,7 +165,7 @@
                             </div>
                         </div>
                         <div>
-                            <img src="res/imgs/test/course1.png" class="tile-cover">
+                            <img src="res/imgs/courses/course1.png" class="tile-cover">
                         </div>
                     </div>
                 </div>
@@ -193,7 +195,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -231,7 +233,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -245,7 +247,7 @@
                             </div>
                         </div>
                         <div>
-                            <img src="res/imgs/test/course1.png" class="tile-cover">
+                            <img src="res/imgs/courses/course1.png" class="tile-cover">
                         </div>
                     </div>
                 </div>
@@ -277,7 +279,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -315,7 +317,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -329,7 +331,7 @@
                             </div>
                         </div>
                         <div>
-                            <img src="res/imgs/test/course1.png" class="tile-cover">
+                            <img src="res/imgs/courses/course1.png" class="tile-cover">
                         </div>
                     </div>
                 </div>
@@ -359,7 +361,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -397,7 +399,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -411,7 +413,7 @@
                             </div>
                         </div>
                         <div>
-                            <img src="res/imgs/test/course1.png" class="tile-cover">
+                            <img src="res/imgs/courses/course1.png" class="tile-cover">
                         </div>
                     </div>
                 </div>
@@ -441,7 +443,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -479,7 +481,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -493,7 +495,7 @@
                             </div>
                         </div>
                         <div>
-                            <img src="res/imgs/test/course1.png" class="tile-cover">
+                            <img src="res/imgs/courses/course1.png" class="tile-cover">
                         </div>
                     </div>
                 </div>
@@ -523,7 +525,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -561,7 +563,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -575,7 +577,7 @@
                             </div>
                         </div>
                         <div>
-                            <img src="res/imgs/test/course1.png" class="tile-cover">
+                            <img src="res/imgs/courses/course1.png" class="tile-cover">
                         </div>
                     </div>
                 </div>
@@ -605,7 +607,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -643,7 +645,7 @@
                                     </div>
                                     <div>
                                         <div class="tile-ava-container" style="float: left; margin-right: 15px; margin-top: 5px">
-                                            <img src="res/imgs/test/teacher1.png" class="tile-ava-img">
+                                            <img src="res/imgs/teachers/teacher1.png" class="tile-ava-img">
                                         </div>
                                         <span>
                                             Trần Đình Dần (Master Trần)
@@ -657,7 +659,7 @@
                             </div>
                         </div>
                         <div>
-                            <img src="res/imgs/test/course1.png" class="tile-cover">
+                            <img src="res/imgs/courses/course1.png" class="tile-cover">
                         </div>
                     </div>
                 </div>
