Menu dropdown Danh mục

--- a/ezlearning-frontend/UI/home.html
+++ b/ezlearning-frontend/UI/home.html
@@ -23,10 +23,36 @@
             <div class="row" style="width: 100%">
                 <div class="col-sm" style="width: 35%; margin-top: 3px;">
                     <img src="res/icons/logos/navbar.png" width="138px">
-                    <span style="margin-left: 50px">
+                    <span id="nav-cats" style="margin-left: 50px; cursor: pointer;">
                         Danh mục
                         <img src="res/icons/more-cat.png" width="11px" style="margin-left: 15px">
                     </span>
+                    <div id="dropdown-cats" class="menu-dropdown" style="display: none; left: 75px; min-width: 350px !important;">
+                        <div class="dropdown-content">
+                            <div class="dropdown">
+                                <ul class="split">
+                                    <li>Ngoại ngữ</li>
+                                    <li>Marketing</li>
+                                    <li>Tin học</li>
+                                    <li>Kinh doanh</li>
+                                    <li>Thiết kế</li>
+                                    <li>Lập trình</li>
+                                    <li>Đa phương tiện</li>
+                                    <li>Thể thao</li>
+                                    <li>Sức khỏe</li>
+                                    <li>Âm nhạc</li>
+                                    <li>Nghệ thuật</li>
+                                    <li>Hôn nhân gia đình</li>
+                                    <li>Nuôi dạy con</li>
+                                    <li>Phong thủy/Nhân tướng học</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="dropdown-addon">
+                            Tất cả khóa học
+                            <img id="allcats" src="res/icons/all-cats.png" width="15px" style="margin-top: 3px; float: right">
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm" style="width: 40%; margin: auto;">
                     <div class="search-box">
@@ -50,10 +76,36 @@
                 <div class="row" style="width: 100%">
                     <div class="col-sm" style="width: 35%">
                         <img src="res/icons/logos/navbar-white.png" width="138px">
-                        <span style="margin-left: 50px">
+                        <span id="nav-cats-banner"  style="margin-left: 50px; cursor: pointer;">
                             Danh mục
                             <img src="res/icons/more-cat-white.png" width="11px" style="margin-left: 15px">
                         </span>
+                        <div id="dropdown-cats" class="menu-dropdown" style="display: none; left: 75px; min-width: 350px !important;">
+                            <div class="dropdown-content">
+                                <div class="dropdown">
+                                    <ul class="split">
+                                        <li>Ngoại ngữ</li>
+                                        <li>Marketing</li>
+                                        <li>Tin học</li>
+                                        <li>Kinh doanh</li>
+                                        <li>Thiết kế</li>
+                                        <li>Lập trình</li>
+                                        <li>Đa phương tiện</li>
+                                        <li>Thể thao</li>
+                                        <li>Sức khỏe</li>
+                                        <li>Âm nhạc</li>
+                                        <li>Nghệ thuật</li>
+                                        <li>Hôn nhân gia đình</li>
+                                        <li>Nuôi dạy con</li>
+                                        <li>Phong thủy/Nhân tướng học</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="dropdown-addon">
+                                Tất cả khóa học
+                                <img id="allcats" src="res/icons/all-cats.png" width="15px" style="margin-top: 3px; float: right">
+                            </div>
+                        </div>
                     </div>
                     <div class="col-sm" style="width: 40%; margin: auto;">
                         <div class="search-box-white">
