--- a/ezlearning-frontend/UI/home.html
+++ b/ezlearning-frontend/UI/home.html
@@ -16,6 +16,76 @@
 
 <body style="position: relative;">
 
+    <!--Modal-->
+    <div id="su-si-modal" class="modal-backdrop" style="background-color: rgba(0,0,0,0.25); display: none;">
+        <div class="modal" role="dialog" style="display: block; padding-top: 25px;">
+            <div class="modal-dialog" role="document" style="width: 430px;">
+                <div class="modal-content modal-style" style="border: none !important; border-radius: 10px;">
+                    <div class="modal-top">
+                        <div class="modal-top-tab" style="width: 80%;">
+                            <div id="sign-up-tab" class="modal-tab-item active" style="float: left">Đăng ký</div>
+                            <div id="sign-in-tab" class="modal-tab-item" style="float: left; margin-left: 10px;">Đăng nhập</div>
+                        </div>
+                        <img id="su-si-close" src="res/icons/modal-close.png" width="13px" style="float: right; margin-top: 23px; cursor: pointer;">
+                    </div>
+                    <div id="sign-up-modal" class="modal-main">
+                        <p class="modal-instruction">
+                            Đăng ký tài khoản để sở hữu những khóa học chất lượng trọn đời
+                        </p>
+                        <div id="sign-up-form" class="modal-form">
+                            <div>
+                                <label class="label-normal">Họ tên</label>
+                                <input class="input-normal" type="text">
+                            </div>
+                            <div>
+                                <label class="label-normal">Email hoặc Số điện thoại</label>
+                                <input class="input-normal" type="text">
+                            </div>
+                            <div>
+                                <label class="label-normal">Mật khẩu</label>
+                                <input class="input-normal" type="password">
+                            </div>
+                            <div id="su-warn" class="form-warning" style="display: none;"></div>
+                            <button id="sign-up-submit" class="big-button" style="width: 100%; margin-top: 15px;">Tạo tài khoản</button>
+                        </div>
+                        <div class="sign-up-policy">
+                            Bằng cách nhấn vào nút Đăng ký, bạn đã đồng ý với <a href="#">Điều khoản sử dụng</a> và <a
+                                href="#">Chính sách bảo
+                                mật</a> của chúng tôi
+                        </div>
+                        <p>hoặc</p>
+                        <button class="big-button fb-sign-up" style="width: 100%;">
+                            <img src="res/icons/fb-sign-up.png" width="7px" style="margin-right: 20px;">
+                            Đăng ký bằng Facebook
+                        </button>
+                    </div>
+                    <div id="sign-in-modal" class="modal-main" style="display: none;">
+                            <p class="modal-instruction">
+                                Chào mừng trở lại
+                            </p>
+                            <div id="sign-up-form" class="modal-form">
+                                <div>
+                                    <label class="label-normal">Email hoặc Số điện thoại</label>
+                                    <input class="input-normal" type="text">
+                                </div>
+                                <div>
+                                    <label class="label-normal">Mật khẩu</label>
+                                    <input class="input-normal" type="password">
+                                </div>
+                                <div id="si-warn" class="form-warning" style="display: none;"> </div>
+                                <button id="sign-in-submit" class="big-button" style="width: 100%; margin-top: 15px;">ĐĂNG NHẬP</button>
+                            </div>
+                            <p style="margin-top: 15px;">hoặc</p>
+                            <button class="big-button fb-sign-up" style="width: 100%;">
+                                <img src="res/icons/fb-sign-up.png" width="7px" style="margin-right: 20px;">
+                                Đăng nhập bằng Facebook
+                            </button>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!--Navbar-->
 
     <div class="navbar" style="width: 100%; position: fixed; z-index: 15; display: none;">
@@ -60,61 +130,61 @@
                         <img src="res/icons/search.png" style="float: right; margin-top: 3px" width="13px">
                     </div>
                 </div>
-                <div id="not-logged-in" class="col-sm text-right" style="width: 40%; margin-top: 5px; display: none;">
-                    <span>Đăng nhập</span>
-                    <span class="sign-up-btn" style="margin-left: 30px;">Đăng ký</span>
+                <div id="not-logged-in" class="col-sm text-right" style="width: 40%; margin-top: 5px;">
+                    <span class="sign-in-btn" style="cursor: pointer;">Đăng nhập</span>
+                    <span class="sign-up-btn" style="margin-left: 30px; cursor: pointer;">Đăng ký</span>
                 </div>
-                <div id="logged-in-student" class="col-sm text-right" style="width: 40%;">
-                        <span class="sign-up-btn" style="margin-left: 30px;">Kích hoạt</span>
-                        <img src="res/icons/cart.png" width="16px" style="margin-left: 20px;">
-                        <div class="cart" style="margin-left: 5px;">0</div>
-                        <span id="nav-profile-s" style="cursor: pointer;">
-                            <div class="navbar-ava-container" style="margin-left: 20px;">
-                                <img src="res/imgs/students/student1.png" class="navbar-ava-img">
-                            </div>
-                            <img src="res/icons/more-cat.png" width="11px" style="margin-left: 10px">
-                        </span>
-                        <div id="dropdown-profile" class="menu-dropdown" style="display: none; right: -60px; min-width: 230px; text-align: left;">
-                            <div class="dropdown-addon-top" style="font-weight: bold;">
-                                Võ Thịnh Chuẩn
-                            </div>
-                            <div class="dropdown-content">
-                                <div class="dropdown">
-                                    <ul>
-                                        <li>Các khóa học của tôi</li>
-                                        <li>Lịch sử giao dịch</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="dropdown-addon">
-                                Đăng xuất
+                <div id="logged-in-student" class="col-sm text-right" style="width: 40%; display: none;">
+                    <span class="sign-up-btn" style="margin-left: 30px;">Kích hoạt</span>
+                    <img src="res/icons/cart.png" width="16px" style="margin-left: 20px;">
+                    <div class="cart" style="margin-left: 5px;">0</div>
+                    <span id="nav-profile-s" style="cursor: pointer;">
+                        <div class="navbar-ava-container" style="margin-left: 20px;">
+                            <img src="res/imgs/students/student1.png" class="navbar-ava-img">
+                        </div>
+                        <img src="res/icons/more-cat.png" width="11px" style="margin-left: 10px">
+                    </span>
+                    <div id="dropdown-profile" class="menu-dropdown" style="display: none; right: -60px; min-width: 230px; text-align: left;">
+                        <div class="dropdown-addon-top" style="font-weight: bold;">
+                            Võ Thịnh Chuẩn
+                        </div>
+                        <div class="dropdown-content">
+                            <div class="dropdown">
+                                <ul>
+                                    <li>Các khóa học của tôi</li>
+                                    <li>Lịch sử giao dịch</li>
+                                </ul>
                             </div>
                         </div>
-                    </div>
-                    <div id="logged-in-teacher" class="col-sm text-right" style="width: 40%; display: none;">
-                        <span class="sign-up-btn" style="margin-left: 30px;">Tạo khóa học</span>
-                        <span id="nav-profile-t" style="cursor: pointer;">
-                            <div class="navbar-ava-container" style="margin-left: 20px;">
-                                <img src="res/imgs/students/student1.png" class="navbar-ava-img">
-                            </div>
-                            <img src="res/icons/more-cat.png" width="11px" style="margin-left: 10px">
-                        </span>
-                        <div id="dropdown-profile" class="menu-dropdown" style="display: none; right: -60px; min-width: 230px; text-align: left;">
-                            <div class="dropdown-addon-top" style="font-weight: bold;">
-                                Võ Thịnh Chuẩn
-                            </div>
-                            <div class="dropdown-content">
-                                <div class="dropdown">
-                                    <ul>
-                                        <li>Các khóa học của tôi</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="dropdown-addon">
-                                Đăng xuất
-                            </div>
+                        <div class="dropdown-addon">
+                            Đăng xuất
                         </div>
                     </div>
+                </div>
+                <div id="logged-in-teacher" class="col-sm text-right" style="width: 40%; display: none;">
+                    <span class="sign-up-btn" style="margin-left: 30px;">Tạo khóa học</span>
+                    <span id="nav-profile-t" style="cursor: pointer;">
+                        <div class="navbar-ava-container" style="margin-left: 20px;">
+                            <img src="res/imgs/students/student1.png" class="navbar-ava-img">
+                        </div>
+                        <img src="res/icons/more-cat.png" width="11px" style="margin-left: 10px">
+                    </span>
+                    <div id="dropdown-profile" class="menu-dropdown" style="display: none; right: -60px; min-width: 230px; text-align: left;">
+                        <div class="dropdown-addon-top" style="font-weight: bold;">
+                            Võ Thịnh Chuẩn
+                        </div>
+                        <div class="dropdown-content">
+                            <div class="dropdown">
+                                <ul>
+                                    <li>Các khóa học của tôi</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="dropdown-addon">
+                            Đăng xuất
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -164,12 +234,12 @@
                             <img src="res/icons/search-white.png" style="float: right; margin-top: 3px" width="13px">
                         </div>
                     </div>
-                    <div id="not-logged-in-b" class="col-sm text-right" style="width: 40%; display: none;">
-                        <span>Đăng nhập</span>
-                        <span class="sign-up-btn-white" style="margin-left: 30px;">Đăng ký</span>
+                    <div id="not-logged-in-b" class="col-sm text-right" style="width: 40%;">
+                        <span class="sign-in-btn" style="cursor: pointer;">Đăng nhập</span>
+                        <span class="sign-up-btn white" style="margin-left: 30px; cursor: pointer;">Đăng ký</span>
                     </div>
-                    <div id="logged-in-student-b" class="col-sm text-right" style="width: 40%;">
-                        <span class="sign-up-btn-white" style="margin-left: 30px;">Kích hoạt</span>
+                    <div id="logged-in-student-b" class="col-sm text-right" style="width: 40%; display: none;">
+                        <span class="sign-up-btn white" style="margin-left: 30px;">Kích hoạt</span>
                         <img src="res/icons/cart-white.png" width="16px" style="margin-left: 20px;">
                         <div class="cart-white" style="margin-left: 5px;">0</div>
                         <span id="nav-profile-banner-s" style="cursor: pointer;">
@@ -196,7 +266,7 @@
                         </div>
                     </div>
                     <div id="logged-in-teacher-b" class="col-sm text-right" style="width: 40%; display: none">
-                        <span class="sign-up-btn-white" style="margin-left: 30px;">Tạo khóa học</span>
+                        <span class="sign-up-btn white" style="margin-left: 30px;">Tạo khóa học</span>
                         <span id="nav-profile-banner-t" style="cursor: pointer;">
                             <div class="navbar-ava-container" style="margin-left: 20px;">
                                 <img src="res/imgs/students/student1.png" class="navbar-ava-img">
