1 phần trang detail

--- a/ezlearning-frontend/UI/home.html
+++ b/ezlearning-frontend/UI/home.html
@@ -88,7 +88,7 @@
 
     <!--Navbar-->
 
-    <div class="navbar" style="width: 100%; position: fixed; z-index: 15; display: none;">
+    <div class="navbar" style="width: 100%; position: fixed; z-index: 15;">
         <div class="container">
             <div class="row" style="width: 100%">
                 <div class="col-sm" style="width: 35%; margin-top: 3px;">
@@ -2306,6 +2306,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="res/js/scripts.js"></script>
+    <script src="res/js/home.js"></script>
     <script src="res/js/tile.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
