--- a/ezlearning-frontend/public/index.html
+++ b/ezlearning-frontend/public/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="icons/logos/favicon.png" />
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href="css/home.css" rel="stylesheet" type="text/css">
-    <link href="css/tile.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="/icons/logos/favicon.png" />
+    <link href="/css/styles.css" rel="stylesheet" type="text/css">
+    <link href="/css/home.css" rel="stylesheet" type="text/css">
+    <link href="/css/tile.css" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <title>EzLearning</title>
 </head>
@@ -17,8 +17,8 @@
     <div id="app"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/tile.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="/js/tile.js"></script>
+    <script src="/js/scripts.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
