--- a/ezlearning-frontend/UI/course-detail.html
+++ b/ezlearning-frontend/UI/course-detail.html
@@ -326,12 +326,6 @@
                                 15/11/2018
                             </div>
                         </div>
-                        <div class="row">
-                                <div class="col-sm-12">
-                                    <img src="res/icons/course-detail/life.png" width="14px" style="margin-right: 10px">
-                                    <span class="course-addin-title">Học trọn đời</span>
-                                </div>
-                            </div>
                     </div>
                 </div>
             </div>
@@ -640,18 +634,22 @@
 
                     <div class="container" style="padding: 0px; margin-top: -15px;">
                         <div class="your-comment-title">Đánh giá của bạn</div>
-                        <div class="row">
-                            <div class="col-sm-3" style="padding-top: 5px;">
-                                <img src="res/icons/ratings/rate-outline.png" width="20px">
-                                <img src="res/icons/ratings/rate-outline.png" width="20px">
-                                <img src="res/icons/ratings/rate-outline.png" width="20px">
-                                <img src="res/icons/ratings/rate-outline.png" width="20px">
-                                <img src="res/icons/ratings/rate-outline.png" width="20px">
+                        <div class="row comment-act">
+                            <div class="col-sm-3 rate-star" style="padding-top: 5px;">
+                                <img id="rate-1" class="rate-act" src="res/icons/ratings/rate-outline.png" width="20px">
+                                <img id="rate-2" class="rate-act" src="res/icons/ratings/rate-outline.png" width="20px">
+                                <img id="rate-3" class="rate-act" src="res/icons/ratings/rate-outline.png" width="20px">
+                                <img id="rate-4" class="rate-act" src="res/icons/ratings/rate-outline.png" width="20px">
+                                <img id="rate-5" class="rate-act" src="res/icons/ratings/rate-outline.png" width="20px">
                             </div>
                             <div class="col-sm-9" style="padding:0px; margin-left: -40px !important; max-width: 80%; flex-basis: 80%;">
                                 <input class="input-normal" type="text" style="width: 87%">
-                                <button id="sign-up-submit" class="big-button" style="height: 38px; margin-left: 15px;">Gửi</button>
+                                <button id="rate-submit" class="big-button" style="height: 38px; margin-left: 15px;">Gửi</button>
                             </div>
+                        </div>
+                        <div class="re-rate">
+                            Đã đánh giá vào ngày 12/12/2018. 
+                            <a>Đánh giá lại</a>
                         </div>
                     </div>
 
