Update tí xíu nữa cho hệ thống

--- a/ezlearning-frontend/UI/course-detail.html
+++ b/ezlearning-frontend/UI/course-detail.html
@@ -274,7 +274,7 @@
             <div class="col-sm-9"></div>
 
             <div class="col-sm-3" style="padding-left: 0px; padding-right: 0px; right: 0px;">
-                <div class="tab-content" style="padding: 30px;">
+                <div class="box-content" style="padding: 30px;">
                     <div class="cover-content">
                         <img src="res/imgs/courses/course5.png" class="cover-content-img">
                     </div>
@@ -297,7 +297,7 @@
                         THÊM VÀO GIỎ
                     </div>
                 </div>
-                <div class="tab-content course-addinfo" style="margin-top: 15px;">
+                <div class="box-content course-addinfo" style="margin-top: 15px;">
                     <div class="container" style="padding: 0px">
                         <div class="row">
                             <div class="col-sm-6">
@@ -341,7 +341,7 @@
 
                 <!--Info-->
 
-                <div id="info" class="tab-content">
+                <div id="info" class="box-content">
                     <div class="tab-content-title">
                         Thông tin chung
                     </div>
@@ -371,7 +371,7 @@
 
                 <!--Lecture-->
 
-                <div id="lecture" class="tab-content">
+                <div id="lecture" class="box-content">
                     <div class="tab-content-title">
                         Giáo trình
                     </div>
@@ -442,7 +442,7 @@
 
                 <!--Teacher-->
 
-                <div id="teacher" class="tab-content">
+                <div id="teacher" class="box-content">
                     <div class="tab-content-title">
                         Giảng viên
                     </div>
@@ -493,7 +493,7 @@
 
                 <!--Rating-->
 
-                <div id="rating" class="tab-content">
+                <div id="rating" class="box-content">
                     <div class="tab-content-title">
                         Đánh giá
                     </div>
