Done lecture-detail

--- a/ezlearning-frontend/UI/course-detail.html
+++ b/ezlearning-frontend/UI/course-detail.html
@@ -376,15 +376,15 @@
                         Giáo trình
                     </div>
                     <div class="row" style="margin-bottom: 15px;">
-                        <div class="col-sm-10 parent-title">
+                        <div class="col-sm-10 chapter-title">
                         </div>
                         <div class="col-sm-2">
                             <span class="lecture-count" style="color: #000">24 bài</span>
                         </div>
                     </div>
-                    <div class="parent">
+                    <div class="chapter">
                         <div class="row">
-                            <div class="col-sm-10 parent-title">
+                            <div class="col-sm-10 chapter-title">
                                 Phần 1: Tìm hiểu về Javascript
                             </div>
                             <div class="col-sm-2">
@@ -393,9 +393,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="parent">
+                    <div class="chapter">
                         <div class="row">
-                            <div class="col-sm-10 parent-title">
+                            <div class="col-sm-10 chapter-title">
                                 Phần 2: Tương tác cơ bản với web
                             </div>
                             <div class="col-sm-2">
@@ -404,9 +404,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="parent">
+                    <div class="chapter">
                         <div class="row">
-                            <div class="col-sm-10 parent-title">
+                            <div class="col-sm-10 chapter-title">
                                 Phần 3: Thực hành làm ứng dụng nhỏ
                             </div>
                             <div class="col-sm-2">
@@ -427,9 +427,9 @@
                             </span>
                         </div>
                     </div>
-                    <div class="parent">
+                    <div class="chapter">
                         <div class="row">
-                            <div class="col-sm-10 parent-title">
+                            <div class="col-sm-10 chapter-title">
                                 Phần 4: Tổng kết
                             </div>
                             <div class="col-sm-2">
