--- a/ezlearning-frontend/public/index.html
+++ b/ezlearning-frontend/public/index.html
@@ -9,7 +9,10 @@
     <link href="/css/styles.css" rel="stylesheet" type="text/css">
     <link href="/css/home.css" rel="stylesheet" type="text/css">
     <link href="/css/tile.css" rel="stylesheet" type="text/css">
+    <link href="/css/cart.css" rel="stylesheet" type="text/css">
     <link href="/css/course-detail.css" rel="stylesheet" type="text/css">
+    <link href="/css/lecture-detail.css" rel="stylesheet" type="text/css">
+    <link href="/css/profile.css" rel="stylesheet" type="text/css">
    
     <title>EzLearning</title>
 </head>
@@ -23,7 +26,8 @@
     <script src="/js/scripts.js"></script>
     <script src="/js/course-detail.js"></script>
     <script src="/js/lecture-detail.js"></script>
-    
+    <script src="/js/profile.js"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
