Hoàn thành thanh toán

--- a/ezlearning-frontend/UI/profile-student.html
+++ b/ezlearning-frontend/UI/profile-student.html
@@ -582,7 +582,7 @@
                                                         Nhập môn ngôn ngữ lập trình Javascript
                                                 </span>
                                             </div>
-                                            <div class="row" style="margin-top: 5px;">
+                                            <div class="row" style="margin-top: 5px; width: 100%; position: absolute;">
                                                 <div class="col-sm-6">
                                                     <img src="res/imgs/teachers/teacher2.png" class="cart-item-ava">
                                                     <span class="cart-item-name">Phan Văn Luân</span>
@@ -634,7 +634,7 @@
                                                         Nhập môn ngôn ngữ lập trình Javascript
                                                 </span>
                                             </div>
-                                            <div class="row" style="margin-top: 5px;">
+                                            <div class="row" style="margin-top: 5px; width: 100%; position: absolute;">
                                                 <div class="col-sm-6">
                                                     <img src="res/imgs/teachers/teacher2.png" class="cart-item-ava">
                                                     <span class="cart-item-name">Phan Văn Luân</span>
